--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }],
+  "rewrites": [
+    { "source": "/:path((?!.*\\..*).*)", "destination": "/index.html" }
+  ],
   "outputDirectory": "build"
 }
